--- a/public_html/index.html
+++ b/public_html/index.html
@@ -54,7 +54,7 @@ Date: 3/21/2023
       </div>
 
       <div class="inputArea">
-        <label class="inputLabel" for="stauts">Status</label>
+        <label class="inputLabel" for="curStatus">Status</label>
         <input class="userInput" type="text" name="curStatus" id="curStatus">
       </div>
 
