potentially working product

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -12,7 +12,7 @@
     <div id="itemContainer">
       <!-- User options section -->
       <div id="userOptions">
-        <h2 class="subTitle">Welcome xxxx! What would you like to do?</h2>
+        <h2 class="subTitle" id="nameDisplay">Welcome xxxx! What would you like to do?</h2>
         <div class="itemStarter">
           <input type="text" class="userInput" id="listingSearch" />
           <button type="button" class="selectionButton" id="sublistingButton">
