--- a/public_html/home.html
+++ b/public_html/home.html
@@ -54,6 +54,6 @@
           </div>
       </div>
     </div>
-    <script src="allItems.js"></script>
+    <script src="homeItem.js"></script>
   </body>
 </html>
