--- a/public_html/post.html
+++ b/public_html/post.html
@@ -1,20 +1,27 @@
+<!--
+This will create the html portion of the website which
+displays the page where users can post a new item.
+Author: Luke Laurie
+Date: 2/28/2023
+ -->
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Post Item</title>
   </head>
   <body>
-    <h1 class="mainTitle postTitle" postTitle>Ostaa</h1>
+    <h1 class="mainTitle postTitle">Ostaa</h1>
     <!-- The section to add a specific item -->
     <div id="addItemSection">
       <h1 class="postIntro">Add a Post</h1>
 
       <div class="inputArea">
         <label class="inputLabel" for="title">Title</label>
-        <input class="userInput" type="text" name="title" id="title" />
+        <input class="userInput" type="text" name="title" id="title">
       </div>
 
       <div class="inputArea">
@@ -24,21 +31,21 @@
           type="text"
           name="description"
           id="description"
-        />
+        >
       </div>
 
       <div class="inputArea">
         <label class="inputLabel" for="price">Price</label>
-        <input class="userInput" type="number" name="price" id="price" />
+        <input class="userInput" type="number" name="price" id="price">
       </div>
 
       <div class="inputArea">
         <label class="inputLabel" for="curStatus">Status</label>
-        <input class="userInput" type="text" name="curStatus" id="curStatus" />
+        <input class="userInput" type="text" name="curStatus" id="curStatus">
       </div>
 
       <div class="inputArea">
-        <input type="file" accept="image/*" class="imageSelect" id="image"/>
+        <input type="file" accept="image/*" class="imageSelect" id="image">
         <button
           type="button"
           name="button"
@@ -49,6 +56,6 @@
         </button>
       </div>
     </div>
-    <script src="newItem.js"></script>
+    <script src="postItem.js"></script>
   </body>
 </html>
