--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,10 +1,17 @@
+<!--
+This will create the html portion of the website which
+displays the login page to the user.
+Author: Luke Laurie
+Date: 2/28/2023
+ -->
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id="userCreation">
@@ -20,7 +27,7 @@
             type="text"
             name="username"
             id="usernameLogin"
-          />
+          >
         </div>
 
         <div class="inputArea">
@@ -30,7 +37,7 @@
             type="text"
             name="username"
             id="passwordLogin"
-          />
+          >
         </div>
 
         <button type="button" class="selectionButton" id="loginButton">
@@ -50,7 +57,7 @@
             type="text"
             name="username"
             id="usernameRegister"
-          />
+          >
         </div>
 
         <div class="inputArea">
@@ -60,7 +67,7 @@
             type="text"
             name="username"
             id="passwordRegister"
-          />
+          >
         </div>
 
         <button type="button" class="selectionButton" id="registerButton">
